--- a/azkar/templates/all_dhikr.html
+++ b/azkar/templates/all_dhikr.html
@@ -15,7 +15,7 @@
                name="q"
                value="{{ query }}">
 
-        <button class="btn btn-outline-secondary" type="submit">
+        <button class="btn btn-outline-secondary rounded" type="submit">
             <i class="bi bi-search"></i>
         </button>
 
