--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -81,9 +81,9 @@ body {
 
 <nav class="navbar navbar-expand-lg navbar-dark mb-4">
 <div class="container">
-
+    
     <span class="navbar-brand">
-        <i class="bi bi-book me-2"></i> الأذكار
+        <i class="bi bi-book me-2"></i> الأذكار <sub>by Fares Essam</sub>
     </span>
 
     <div>
