--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -87,12 +87,12 @@ body {
     </span>
 
     <div>
-        <a class="btn btn-outline-light btn-sm me-2" href="/">
+        <a class="btn btn-outline-light btn-sm me-2" href="all_dhikr/">
             <i class="bi bi-card-list"></i>
             جميع الأذكار
         </a>
 
-        <a class="btn btn-outline-light btn-sm me-2" href="/categories/">
+        <a class="btn btn-outline-light btn-sm me-2" href="/">
             <i class="bi bi-folder"></i>
             الأنواع
         </a>
