--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -48,31 +48,13 @@ body {
     text-align: justify;
 }
 
-.card {
-    border-radius: 18px;
-}
-.page {
-    perspective: 1500px;
+footer{
+    direction: ltr !important;
 }
 
-.page-inner {
-    transition: transform .8s;
-    transform-style: preserve-3d;
+footer span{
+    font-size: 25px;
 }
-
-.page.flip .page-inner {
-    transform: rotateY(-180deg);
-}
-
-.page-face {
-    backface-visibility: hidden;
-}
-
-.page-back {
-    transform: rotateY(180deg);
-}
-
-
 
 </style>
 </head>
@@ -83,7 +65,7 @@ body {
 <div class="container">
     
     <span class="navbar-brand">
-        <i class="bi bi-book me-2"></i> الأذكار <sub>by Fares Essam</sub>
+        <i class="bi bi-book me-2"></i> الأذكار
     </span>
 
     <div>
@@ -112,6 +94,13 @@ body {
 {% endblock %}
 
 </div>
+<footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <p>&copy; 2025 <span>by Fares Essam</span>
+        <br>
+        My Phone: 01210806085
+    </p>
+</footer>
+
 
 </body>
 </html>
