--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -94,6 +94,7 @@ footer span{
 {% endblock %}
 
 </div>
+<div class="space_bottom" style="margin-bottom: 200px;"></div>
 <footer class="bg-dark text-white text-center py-3 fixed-bottom">
     <p>&copy; 2025 <span>by Fares Essam</span>
         <br>
