--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -87,12 +87,12 @@ body {
     </span>
 
     <div>
-        <a class="btn btn-outline-light btn-sm me-2" href="/">
+        <a class="btn btn-outline-light btn-sm me-2" href="all_dhikr/">
             <i class="bi bi-card-list"></i>
             جميع الأذكار
         </a>
 
-        <a class="btn btn-outline-light btn-sm me-2" href="/categories/">
+        <a class="btn btn-outline-light btn-sm me-2" href="/">
             <i class="bi bi-folder"></i>
             الأنواع
         </a>
@@ -112,6 +112,14 @@ body {
 {% endblock %}
 
 </div>
+
+<div class="space_bottom" style="margin-bottom: 200px;"></div>
+<footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <p>&copy; 2025 <span>by Fares Essam</span>
+        <br>
+        My Phone: 01210806085
+    </p>
+</footer>
 
 </body>
 </html>
