--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -6,17 +6,15 @@
 
 <title>موقع الأذكار</title>
 
-<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet">
 
-<!-- Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
       rel="stylesheet">
 
-<!-- Arabic Elegant Font -->
 <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" 
-      rel="stylesheet">
+    rel="stylesheet">
+<link rel="icon" href="favicon.ico" type="../image/icon_website.avif">
 
 <style>
 body {
