--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -14,7 +14,7 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" 
     rel="stylesheet">
-<link rel="icon" href="favicon.ico" type="../image/icon_website.avif">
+<link rel="icon" href="favicon.ico" type="../image/icon_website.ico">
 
 <style>
 body {
