--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -13,8 +13,8 @@
       rel="stylesheet">
 
 <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" 
-    rel="stylesheet">
-<link rel="icon" href="favicon.ico" type="../image/icon_website.ico">
+      rel="stylesheet">
+<link rel="icon" href="../image/icon_website.ico" type="image/x-icon">
 
 <style>
 body {
