fix_problem_url

--- a/azkar/templates/base.html
+++ b/azkar/templates/base.html
@@ -67,7 +67,7 @@ footer span{
     </span>
 
     <div>
-        <a class="btn btn-outline-light btn-sm me-2" href="all_dhikr/">
+        <a class="btn btn-outline-light btn-sm me-2" href="/all_dhikr">
             <i class="bi bi-card-list"></i>
             جميع الأذكار
         </a>
