--- a/azkar/templates/all_dhikr.html
+++ b/azkar/templates/all_dhikr.html
@@ -1,41 +1,34 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <h2 class="mb-3">جميع الأذكار</h2>
 
-
 <form method="get" class="mb-4">
+  <div class="input-group">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="ابحث عن ذكر..."
+      name="q"
+      value="{{ query }}"
+    />
 
-    <div class="input-group">
-
-        <input type="text" 
-               class="form-control"
-               placeholder="ابحث عن ذكر..."
-               name="q"
-               value="{{ query }}">
-
-        <button class="btn btn-outline-secondary rounded" type="submit">
-            <i class="bi bi-search"></i>
-        </button>
-
-    </div>
-
+    <button class="btn btn-outline-secondary rounded" type="submit">
+      <i class="bi bi-search"></i>
+    </button>
+  </div>
 </form>
 
-
-
 <div class="list-group">
-
-{% for item in dhikr %}
-    <a href="{% url 'dhikr_detail' item.id %}" 
-       class="list-group-item list-group-item-action">
-        {{ item.text|truncatewords:12 }}
-    </a>
-{% empty %}
-    <p>لا توجد نتائج مطابقة.</p>
-{% endfor %}
-
+  {% for item in dhikr %}
+  <a
+    href="{% url 'dhikr_detail' item.id %}"
+    class="list-group-item list-group-item-action"
+  >
+    {{ item.text|truncatewords:12 }}
+  </a>
+  {% empty %}
+  <p>لا توجد نتائج مطابقة.</p>
+  {% endfor %}
 </div>
 
 {% endblock %}
