--- a/azkar/templates/category_list.html
+++ b/azkar/templates/category_list.html
@@ -1,18 +1,16 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <h2 class="mb-3">أنواع الأذكار</h2>
 
 <div class="list-group">
-
-{% for cat in categories %}
-    <a href="{% url 'dhikr_by_category' cat.id %}"
-    class="list-group-item list-group-item-action">
-        {{ cat.name }}
-    </a>
-{% endfor %}
-
+  {% for cat in categories %}
+  <a
+    href="{% url 'dhikr_by_category' cat.id %}"
+    class="list-group-item list-group-item-action"
+  >
+    {{ cat.name }}
+  </a>
+  {% endfor %}
 </div>
 
 {% endblock %}
