--- a/azkar/templates/dhikr_by_category.html
+++ b/azkar/templates/dhikr_by_category.html
@@ -1,17 +1,15 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 
 <h2 class="mb-3">الأذكار الخاصة: {{ category.name }}</h2>
 
 <div class="list-group">
-
-{% for item in dhikr %}
-    <a href="{% url 'dhikr_detail' item.id %}"
-    class="list-group-item list-group-item-action">
-        {{ item.text|truncatewords:12 }}
-    </a>
-{% endfor %}
-
+  {% for item in dhikr %}
+  <a
+    href="{% url 'dhikr_detail' item.id %}"
+    class="list-group-item list-group-item-action"
+  >
+    {{ item.text|truncatewords:12 }}
+  </a>
+  {% endfor %}
 </div>
 {% endblock %}
